[gd_scene load_steps=5 format=3 uid="uid://dkhuotug70lrs"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_2j14h"]
[ext_resource type="AudioStream" uid="uid://cw1krge3yjoxe" path="res://assets/ui_art/Sounds/tap-a.ogg" id="2_ddn41"]
[ext_resource type="AudioStream" uid="uid://bmuw10gm22qa4" path="res://assets/ui_art/Sounds/tap-b.ogg" id="3_fcwqp"]

[sub_resource type="ImageTexture" id="ImageTexture_b2a6r"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2j14h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 435.0
offset_top = 399.0
offset_right = 581.0
offset_bottom = 465.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Pen Fight 3D"
icon = SubResource("ImageTexture_b2a6r")

[node name="Play_audio" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/Play"]
stream = ExtResource("2_ddn41")

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Quit_audio" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/Quit"]
stream = ExtResource("3_fcwqp")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
